# amai

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/amaic/: Cargo.toml
crates/amaic/src/: main.rs  parser.rs
crates/amaic_analyzer/: Cargo.toml
crates/amaic_analyzer/src/: lib.rs
crates/amaic_ast/: Cargo.toml
crates/amaic_ast/src/: ftypes.rs  lib.rs  pattern.rs
crates/amaic_core/: Cargo.toml
crates/amaic_core/src/: diagnostic.rs  lib.rs  span.rs
crates/amaic_lexer/: Cargo.toml
crates/amaic_lexer/src/: error.rs  lib.rs  operator.rs  token.rs  token_kind.rs
crates/amaic_parser/: Cargo.toml
crates/amaic_parser/src/: lib.rs
crates/amaic_vm/: Cargo.toml
crates/amaic_vm/src/: call_frame.rs  function.rs  inst.rs  lib.rs
src/: cli.rs  diagnostic.rs  main.rs
src/codegen/: function_builder.rs  mod.rs  value.rs
src/codegen/ir/: context.rs  function.rs  inst.rs  mod.rs  module.rs
src/codegen/ir_lowerer/: function_builder.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  ftypes.rs  mod.rs
src/semantic_checker/: mod.rs  types.rs
src/tools/: bytecode_disassembler.rs
src/vm/: call_frame.rs  function.rs  inst.rs  mod.rs  value.rs
